--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 defaults: &defaults
   adapter: mysql2
-  username:
-  password:
+  username: root
+  password: hello
   encoding: utf8
 
 production:
